[gd_scene load_steps=5 format=3 uid="uid://bklrkcudei1mq"]

[ext_resource type="Script" uid="uid://yf5nmh1exe8x" path="res://main/UI/menu/pages/pause.gd" id="2_d2vhy"]
[ext_resource type="PackedScene" uid="uid://cvrlq78ye3nkq" path="res://main/UI/menu/pages/settings.tscn" id="2_pau44"]

[sub_resource type="Gradient" id="Gradient_nqobt"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.003921569, 0.003921569, 0.003921569, 0.41568628)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pau44"]
gradient = SubResource("Gradient_nqobt")

[node name="Page" type="CanvasLayer"]
process_mode = 2
script = ExtResource("2_d2vhy")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_pau44")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Pause" type="Label" parent="MarginContainer"]
modulate = Color(0.84032553, 0.84032553, 0.8403255, 0.4392157)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "P A U S E"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
process_mode = 2
z_index = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 20

[node name="continue" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 2
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "C O N T I N U E"
flat = true

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 2
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "S E T T I N G S"
flat = true

[node name="menu" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 2
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "M E N U
"
flat = true

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 2
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
text = "E X I T
"
flat = true

[node name="SettingsPage" parent="." instance=ExtResource("2_pau44")]
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
